--- a/.github/workflows/buildjava.yml
+++ b/.github/workflows/buildjava.yml
@@ -2,7 +2,7 @@ name: Java CI
 on: [push, pull_request]
 jobs:
   build:
-    runs-on: $
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
@@ -11,10 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Set up JDK $
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
-          java-version: $
+          java-version: ${{ matrix.java }}
       - name: Make Maven Wrapper executable
         if: contains(matrix.os, 'win') == false
         run: chmod +x ./mvnw
