--- a/.github/workflows/buildjava.yml
+++ b/.github/workflows/buildjava.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Set up JDK ${{ matrix.java }}
+      - name: Set up JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v1
         with:
-          java-version: ${{ matrix.java }}
+          java-version: ${{ matrix.java_version }}
       - name: Make Maven Wrapper executable
         if: contains(matrix.os, 'win') == false
         run: chmod +x ./mvnw
